--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.social-media-icons-white a{
+  color: white;
+  font-size: 25px;
+  margin: 10px;
+}
